--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <select name="occupation">
                             <option value="student">School Student</option>
                             <option value="undergrad">Undergraduate</option>
-                            <option value="worker">Young Worker</option>
+                            <option value="worker">Worker</option>
                         </select>
                     </td>
                 </tr>
