--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <td><input type="text" name="age"></td>
                 </tr>
                 <tr>
-                    <td>Assigned Sex:</td>
+                    <td>Gender:</td>
                     <td>
                         <select name="sex">
                             <option value="male">Male</option>
